--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@
 DB_URL = mongodb://localhost:27017/postaway
 # For IPv4: DB_URL = mongodb://127.0.0.1:27017/ecomdb
 JWT_SECRET = e7TQj6kzHJNcIpX6truwBDusC0Ny7Y4K
+EMAIL_USER=cnanjali9@gmail.com
+EMAIL_PASS=klfx fgre pkxe fxdu
+
+
+              
+              
+            
